--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.GymApp"
         tools:targetApi="31">
         <activity
+            android:name=".activity.WorkoutActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.TrainingPlanActivity"
             android:exported="false" />
         <activity
