--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             android:exported="false"
             android:screenOrientation="portrait"/>
         <activity
-            android:windowSoftInputMode="adjustPan"
+            android:windowSoftInputMode="adjustResize"
             android:name=".activity.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.GymApp"
