--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
     <application
         android:allowBackup="true"
+        android:backupAgent="com.example.gymapp.persistence.DatabaseBackupAgent"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -22,6 +23,10 @@
         android:theme="@style/Theme.Dark"
         tools:targetApi="31"
         tools:ignore="LockedOrientationActivity">
+        <!--<meta-data
+            android:name="com.google.android.backup.api_key"
+            android:value=""/>-->
+
         <activity
             android:name=".activity.EditHistoryActivity"
             android:exported="false"
