--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Dark"
+        android:theme="@style/Theme.Default"
         tools:targetApi="31"
         tools:ignore="LockedOrientationActivity">
         <!--<meta-data
