--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
 
     <application
         android:allowBackup="true"
-        android:backupAgent="com.example.gymapp.persistence.DatabaseBackupAgent"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -24,14 +23,11 @@
         android:theme="@style/Theme.Default"
         tools:targetApi="31"
         tools:ignore="LockedOrientationActivity">
-        <!--<meta-data
-            android:name="com.google.android.backup.api_key"
-            android:value=""/>-->
-
         <activity
             android:name=".activity.TutorialActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,37 +39,44 @@
             android:name=".activity.EditHistoryActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"
+            tools:ignore="DiscouragedApi" />
         <activity
             android:name=".activity.HistoryDetailsActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi" />
         <activity
             android:name=".activity.WorkoutActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"
+            tools:ignore="DiscouragedApi" />
         <activity
             android:name=".activity.TrainingPlanActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi" />
         <activity
             android:name=".activity.CreateRoutineActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustResize"
+            tools:ignore="DiscouragedApi" />
         <activity
             android:name=".activity.MainActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize"
+            tools:ignore="DiscouragedApi">
         </activity>
 
         <activity
             android:name=".activity.TimerActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"
+            tools:ignore="DiscouragedApi" />
 
         <activity android:name=".activity.TimerPopupActivity"
             android:theme="@style/Theme.AppCompat.Dialog.Alert"
