--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,12 @@
             android:windowSoftInputMode="adjustPan"
             tools:ignore="DiscouragedApi" />
         <activity
+            android:name=".activity.NoPlanWorkoutActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            tools:ignore="DiscouragedApi" />
+        <activity
             android:name=".activity.TrainingPlanActivity"
             android:exported="false"
             android:screenOrientation="portrait"
